--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  dio: ^5.6.0
+  dio: ^5.7.0
   get_it: ^7.7.0
   bloc: ^8.1.4
   flutter_screenutil: ^5.9.3
@@ -45,6 +45,18 @@ dependencies:
   dartz: ^0.10.1
   http: ^1.2.2
   smooth_page_indicator: ^1.2.0+3
+  jwt_decoder: ^2.0.1
+  flutter_secure_storage: ^9.2.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  ansicolor: ^2.0.3
+  talker_dio_logger: ^4.4.1
+  internet_connection_checker: ^1.0.0+1
+  go_router: ^14.2.8
+  email_validator: ^3.0.0
+  formz: ^0.7.0
+  string_validator: ^1.1.0
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +68,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
